desativando landscape mode

--- a/AFI10/app/src/main/AndroidManifest.xml
+++ b/AFI10/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.AFI10">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
